--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="app-bar-esquerda">
       <div class="app-bar-logo-container">
         <a href="/" class="app-bar-link">
-          <img src="/imagens/icon.png" alt="Logo da página" class="app-bar-logo"></a>
+          <img src="../imagens/icon.png" alt="Logo da página" class="app-bar-logo"></a>
       </div>
       <div class="app-bar-links">
         <a href="/" class="app-bar-link">Home</a>
