--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="app-bar-esquerda">
       <div class="app-bar-logo-container">
         <a href="/" class="app-bar-link">
-          <img src="../imagens/icon.png" alt="Logo da página" class="app-bar-logo"></a>
+          <img src="./imagens/icon.png" alt="Logo da página" class="app-bar-logo"></a>
       </div>
       <div class="app-bar-links">
         <a href="/" class="app-bar-link">Home</a>
@@ -43,9 +43,9 @@
     
     <div class="app-bar-direita">
       <a href="https://www.instagram.com/_talitac_/?igshid=YmMyMTA2M2Y%3D" class="app-bar-link">
-      <img src="/imagens/instagram.png" alt="Instragram" class="app-bar-icon"></a>
+      <img src="./imagens/instagram.png" alt="Instragram" class="app-bar-icon"></a>
       <a href="https://www.linkedin.com/in/talic98" class="app-bar-link">
-      <img src="/imagens/linkedin.png" alt="Linkedin" class="app-bar-icon"></a>
+      <img src="./imagens/linkedin.png" alt="Linkedin" class="app-bar-icon"></a>
     </div></header>
     <!-- app bar fim -->
 
