--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="/postagens/fintechs.html" class="link-postagem">Uma análise sobre a evolução das Fintechs no Brasil no período de 2013 a 2021</a>
       </div>
     <div class="link-imagem-container">
-      <img src="/imagens/fintechs.jpg" alt="Imagem Fintechs" class="link-imagem">
+      <img src="./imagens/fintechs.jpg" alt="Imagem Fintechs" class="link-imagem">
     </div></div>
   <!-- link item1 fim -->
 
@@ -76,7 +76,7 @@
 danos gerados pela divulgação de produtos e serviços</a>
       </div>
     <div class="link-imagem-container">
-      <img src="/imagens/midias.jpg" alt="Imagem Redes Sociais" class="link-imagem">
+      <img src="./imagens/midias.jpg" alt="Imagem Redes Sociais" class="link-imagem">
     </div></div>
   <!-- link item2 fim -->
 
@@ -87,7 +87,7 @@ danos gerados pela divulgação de produtos e serviços</a>
         <a href="/postagens/riscos.html" class="link-postagem">Gestão integrada de riscos, compliance e controles internos da gestão</a>
       </div>
     <div class="link-imagem-container">
-      <img src="/imagens/risco.jpg" alt="Imagem Risco e Compliance" class="link-imagem">
+      <img src="./imagens/risco.jpg" alt="Imagem Risco e Compliance" class="link-imagem">
     </div></div>
   <!-- link item3 fim -->
       </div></div>
