--- a/postagens/fintechs.html
+++ b/postagens/fintechs.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uma análise sobre a evolução das Fintechs no Brasil no período de 2013 a 2021</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
   <header class="app-bar">
     <div class="app-bar-esquerda">
       <div class="app-bar-logo-container">
-        <a href="./" class="app-bar-link">
-          <img src="./imagens/icon.png" alt="Logo da página" class="app-bar-logo"></a>
+        <a href="../" class="app-bar-link">
+          <img src="../imagens/icon.png" alt="Logo da página" class="app-bar-logo"></a>
       </div>
       <div class="app-bar-links">
         <a href="./" class="app-bar-link">Home</a>
